--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve --open",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "deploy" : "ng deploy"
   },
   "private": true,
   "dependencies": {
@@ -20,6 +21,7 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "angular-cli-ghpages": "^1.0.0",
     "ng-zorro-antd": "^12.1.1",
     "ngx-color": "^7.3.3",
     "react-color": "^2.19.3",
